# fuzzy-api

./: DOCUMENTATION.md  README.md  UML diagram.drawio  pyproject.toml  sample.env
api_endpoint/: __init__.py  main.py  utils.py
api_endpoint/models/: __init__.py  person.py
tests/: test_endpoints.py
